# jira-triage-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  agent.go  agent_test.go  config.go  evaluator.go  evaluator_test.go  go.mod  go.sum  jira.go  main.go  tools.go
docs/: DEPLOYMENT_GUIDE.md  MIGRATION_GUIDE.md  deployment-from-scratch.md  diagnostician_fixes_execution_summary.md  (+6 more)
langgraph-agent/: =3.0.0  Dockerfile  Makefile  Makefile.original  langgraph.json  pyproject.toml  requirements-local.txt  requirements.txt
langgraph-agent/.langgraph_api/: .langgraph_ops.pckl
langgraph-agent/secrets/: example-secrets.yaml
langgraph-agent/src/: __init__.py  config.py  constants.py  exceptions.py  main.py  server.py  state.py  supervisor.py
langgraph-agent/src/agents/: __init__.py  dependency_discovery.py  diagnostician.py  history_agent.py  jenkins_investigator.py  jira_agent.py  k8s_investigator.py  k8s_remediation_executor.py  pod_analysis.py  spam_evaluator.py  ticket_router.py
langgraph-agent/src/checkpoint/: __init__.py  k8s_configmap_saver.py
langgraph-agent/src/models/: __init__.py  llm_outputs.py
langgraph-agent/src/services/: __init__.py  approval_comment.py  remediation_lock_service.py  verification_service.py
langgraph-agent/src/tools/: __init__.py  base_mcp_client.py  jenkins_tools.py  jira_tools.py  k8s_tools.py
langgraph-agent/src/utils/: __init__.py  jenkins_url_extractor.py  k8s_client.py  llm_utils.py  log_processor.py  mcp_parser.py  pod_name_parser.py
(+185 files in other folders)
