[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-jenkins-agent"
version = "0.1.0"
description = "LangGraph multi-agent system for Jira ticket investigation and Kubernetes remediation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "langgraph-cli[inmem]>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]
